--- a/csharp/TheatricalPlayersRefactoringKata/TheatricalPlayersRefactoringKata.csproj
+++ b/csharp/TheatricalPlayersRefactoringKata/TheatricalPlayersRefactoringKata.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="TheatricalPlayersRefactoringKata.v3.ncrunchproject" />
+  </ItemGroup>
+
 </Project>
